# Woolf

./: README.md
Tier_1/: README.md
Tier_1/01_computer_programming/: README.md  technical_task.md
Tier_1/02_maths_for_comp_science/: README.md  hw01.ipynb  hw02.ipynb  hw03.ipynb  hw04.ipynb  hw05.ipynb  hw06.ipynb  hw07.ipynb  hw08.ipynb  hw09.ipynb  hw10.ipynb
Tier_1/03_data_structures/: README.md  hw02.ipynb  hw03.ipynb  hw03_1.py  hw05.ipynb  hw06.ipynb  hw07.ipynb  hw08.ipynb  hw09.ipynb  hw10.ipynb
Tier_1/03_data_structures/examples/: double_comprehension.py  (+3 more)
Tier_2/: README.md
Tier_2/01_computer_systems/: README.md
Tier_2/02_numerical_programming/: README.md  pyproject.toml
Tier_2/02_numerical_programming/01/: hw01.ipynb
Tier_2/02_numerical_programming/02/: hw02.ipynb
Tier_2/02_numerical_programming/03/: hw03.ipynb
Tier_2/02_numerical_programming/05/: hw05.ipynb
Tier_2/02_numerical_programming/07/: hw07.ipynb
Tier_2/02_numerical_programming/08/: hw08.ipynb
Tier_2/02_numerical_programming/10/: hw10.ipynb
Tier_2/02_numerical_programming/11/: hw11.ipynb
Tier_2/03_machine_learning/: 04.ipynb  04.py  06.ipynb  06.py  08.ipynb  08.py  10.ipynb  10.py  12.ipynb  12.py  README.md  test_task_for_ds.ipynb
Tier_2/04_deep_learning/: 06.ipynb  08.ipynb  10.ipynb  12.ipynb  README.md  final_project.ipynb
Tier_2/05_relational_db/: README.md
Tier_4/: README.md
Tier_4/01_front_end_with_react/: README.md
Tier_4/01_html_css/: README.md
Tier_4/02_javascript/: README.md
Tier_4/03_JS_&_TS/: README.md
Tier_4/04_front_end_with_react/: README.md
(+23 files in other folders)
