[tool.poetry]
name = "02-numerical-programming"
version = "0.1.0"
description = "Tier 2. Module 2 - Numerical programming"
authors = ["Matajur <126118653+Matajur@users.noreply.github.com>"]
license = "Apache License 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
seaborn = "^0.13.2"
scikit-learn = "^1.5.1"
plotly = "5.20.0"
nbformat = "^5.10.4"
ipython = "^8.26.0"
librosa = "^0.10.2.post1"
nltk = "^3.9.1"
gym = "^0.26.2"
pygame = "^2.6.0"
jupyterlab = ">=3"
ipywidgets = ">=7.6"
pygad = "^3.3.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
